input search > text

--- a/html/components/component_group.html
+++ b/html/components/component_group.html
@@ -112,7 +112,8 @@
 						<div class="form">
 							<div class="label"></div>
 							<div class="input-wrap">
-								<input type="search" placeholder="별칭">
+								<input type="text" placeholder="별칭">
+								<button type="button" class="input-remove" aria-label="입력 내용 삭제"></button>
 							</div>
 							<p class="validate-text"></p>
 						</div>
