--- a/html/components/component_input_text.html
+++ b/html/components/component_input_text.html
@@ -163,7 +163,7 @@
 					</dd>
 				</dl>
 				<dl>
-					<dt>Search Button(Browser default)</dt>
+					<dt style="text-decoration:line-through;">Search Button(Browser default) <span class="fc-red-600">사용안함</span></dt>
 					<dd>
 						<div class="form">
 							<div class="input-wrap">
@@ -173,11 +173,11 @@
 					</dd>
 				</dl>
 				<dl>
-					<dt>Search Text <span>With Button</span></dt>
+					<dt>Type Text <span>With Button</span></dt>
 					<dd>
 						<div class="form">
 							<div class="input-wrap input-btn">
-								<input type="search" placeholder="Placeholder" value="Text">
+								<input type="text" placeholder="Placeholder" value="Text">
 								<button type="button" class="input-search" aria-label="입력 내용 검색"></button>
 							</div>
 						</div>
