--- a/html/layout/layout-header.html
+++ b/html/layout/layout-header.html
@@ -159,7 +159,8 @@
 						<div class="gnb-menu-search">
 							<div class="form">
 								<div class="input-wrap input-btn">
-									<input type="search" placeholder="메뉴를 검색해 보세요.">
+									<input type="text" placeholder="메뉴를 검색해 보세요." aria-label="메뉴 검색">
+									<button type="button" class="input-remove" aria-label="입력 내용 삭제"></button>
 									<button type="button" class="input-search" aria-label="입력 내용 검색"></button>
 								</div>
 							</div>
