경제캘린더

--- a/html/components/component_icon.html
+++ b/html/components/component_icon.html
@@ -676,6 +676,22 @@
 					<i class="icon-only icon-12 icon-player-next bg-icon-white"></i>
 				</div>
 			</div>
+			<hr>
+			<div class="ui-guide-box">
+				<h2>icon-star</h2>
+				<div class="guide-column-list">
+					<i class="icon-only icon-48 icon-star bg-brandPrimary-blue400"></i>
+					<i class="icon-only icon-36 icon-star bg-brandPrimary-blue400"></i>
+					<i class="icon-only icon-32 icon-star bg-brandPrimary-blue400"></i>
+					<i class="icon-only icon-28 icon-star bg-brandPrimary-blue400"></i>
+					<i class="icon-only icon-26 icon-star bg-brandPrimary-blue400"></i>
+					<i class="icon-only icon-24 icon-star bg-brandPrimary-blue400"></i>
+					<i class="icon-only icon-20 icon-star bg-brandPrimary-blue400"></i>
+					<i class="icon-only icon-16 icon-star bg-brandPrimary-blue400"></i>
+					<i class="icon-only icon-14 icon-star bg-brandPrimary-blue400"></i>
+					<i class="icon-only icon-12 icon-star bg-brandPrimary-blue400"></i>
+				</div>
+			</div>
 
 		</div>
 	</div>
