경제캘린더

--- a/html/components/component_icon.html
+++ b/html/components/component_icon.html
@@ -693,6 +693,103 @@
 				</div>
 			</div>
 
+			<hr>
+			<div class="ui-guide-box">
+				<h2>icon-alarm</h2>
+				<div class="guide-column-list">
+					<i class="icon-only icon-48 icon-alarm bg-icon-gray_1"></i>
+					<i class="icon-only icon-36 icon-alarm bg-icon-gray_1"></i>
+					<i class="icon-only icon-32 icon-alarm bg-icon-gray_1"></i>
+					<i class="icon-only icon-28 icon-alarm bg-icon-gray_1"></i>
+					<i class="icon-only icon-26 icon-alarm bg-icon-gray_1"></i>
+					<i class="icon-only icon-24 icon-alarm bg-icon-gray_1"></i>
+					<i class="icon-only icon-20 icon-alarm bg-icon-gray_1"></i>
+					<i class="icon-only icon-16 icon-alarm bg-icon-gray_1"></i>
+					<i class="icon-only icon-14 icon-alarm bg-icon-gray_1"></i>
+					<i class="icon-only icon-12 icon-alarm bg-icon-gray_1"></i>
+				</div>
+			</div>
+			<hr>
+			<div class="ui-guide-box">
+				<h2>icon-nav01</h2>
+				<div class="guide-column-list">
+					<i class="icon-only icon-48 icon-nav01 bg-icon-gray_1"></i>
+					<i class="icon-only icon-36 icon-nav01 bg-icon-gray_1"></i>
+					<i class="icon-only icon-32 icon-nav01 bg-icon-gray_1"></i>
+					<i class="icon-only icon-28 icon-nav01 bg-icon-gray_1"></i>
+					<i class="icon-only icon-26 icon-nav01 bg-icon-gray_1"></i>
+					<i class="icon-only icon-24 icon-nav01 bg-icon-gray_1"></i>
+					<i class="icon-only icon-20 icon-nav01 bg-icon-gray_1"></i>
+					<i class="icon-only icon-16 icon-nav01 bg-icon-gray_1"></i>
+					<i class="icon-only icon-14 icon-nav01 bg-icon-gray_1"></i>
+					<i class="icon-only icon-12 icon-nav01 bg-icon-gray_1"></i>
+				</div>
+			</div>
+			<hr>
+			<div class="ui-guide-box">
+				<h2>icon-nav02</h2>
+				<div class="guide-column-list">
+					<i class="icon-only icon-48 icon-nav02 bg-icon-gray_1"></i>
+					<i class="icon-only icon-36 icon-nav02 bg-icon-gray_1"></i>
+					<i class="icon-only icon-32 icon-nav02 bg-icon-gray_1"></i>
+					<i class="icon-only icon-28 icon-nav02 bg-icon-gray_1"></i>
+					<i class="icon-only icon-26 icon-nav02 bg-icon-gray_1"></i>
+					<i class="icon-only icon-24 icon-nav02 bg-icon-gray_1"></i>
+					<i class="icon-only icon-20 icon-nav02 bg-icon-gray_1"></i>
+					<i class="icon-only icon-16 icon-nav02 bg-icon-gray_1"></i>
+					<i class="icon-only icon-14 icon-nav02 bg-icon-gray_1"></i>
+					<i class="icon-only icon-12 icon-nav02 bg-icon-gray_1"></i>
+				</div>
+			</div>
+			<hr>
+			<div class="ui-guide-box">
+				<h2>icon-nav03</h2>
+				<div class="guide-column-list">
+					<i class="icon-only icon-48 icon-nav03 bg-icon-gray_1"></i>
+					<i class="icon-only icon-36 icon-nav03 bg-icon-gray_1"></i>
+					<i class="icon-only icon-32 icon-nav03 bg-icon-gray_1"></i>
+					<i class="icon-only icon-28 icon-nav03 bg-icon-gray_1"></i>
+					<i class="icon-only icon-26 icon-nav03 bg-icon-gray_1"></i>
+					<i class="icon-only icon-24 icon-nav03 bg-icon-gray_1"></i>
+					<i class="icon-only icon-20 icon-nav03 bg-icon-gray_1"></i>
+					<i class="icon-only icon-16 icon-nav03 bg-icon-gray_1"></i>
+					<i class="icon-only icon-14 icon-nav03 bg-icon-gray_1"></i>
+					<i class="icon-only icon-12 icon-nav03 bg-icon-gray_1"></i>
+				</div>
+			</div>
+			<hr>
+			<div class="ui-guide-box">
+				<h2>icon-nav04</h2>
+				<div class="guide-column-list">
+					<i class="icon-only icon-48 icon-nav04 bg-icon-gray_1"></i>
+					<i class="icon-only icon-36 icon-nav04 bg-icon-gray_1"></i>
+					<i class="icon-only icon-32 icon-nav04 bg-icon-gray_1"></i>
+					<i class="icon-only icon-28 icon-nav04 bg-icon-gray_1"></i>
+					<i class="icon-only icon-26 icon-nav04 bg-icon-gray_1"></i>
+					<i class="icon-only icon-24 icon-nav04 bg-icon-gray_1"></i>
+					<i class="icon-only icon-20 icon-nav04 bg-icon-gray_1"></i>
+					<i class="icon-only icon-16 icon-nav04 bg-icon-gray_1"></i>
+					<i class="icon-only icon-14 icon-nav04 bg-icon-gray_1"></i>
+					<i class="icon-only icon-12 icon-nav04 bg-icon-gray_1"></i>
+				</div>
+			</div>
+			<hr>
+			<div class="ui-guide-box">
+				<h2>icon-nav05</h2>
+				<div class="guide-column-list">
+					<i class="icon-only icon-48 icon-nav05 bg-icon-gray_1"></i>
+					<i class="icon-only icon-36 icon-nav05 bg-icon-gray_1"></i>
+					<i class="icon-only icon-32 icon-nav05 bg-icon-gray_1"></i>
+					<i class="icon-only icon-28 icon-nav05 bg-icon-gray_1"></i>
+					<i class="icon-only icon-26 icon-nav05 bg-icon-gray_1"></i>
+					<i class="icon-only icon-24 icon-nav05 bg-icon-gray_1"></i>
+					<i class="icon-only icon-20 icon-nav05 bg-icon-gray_1"></i>
+					<i class="icon-only icon-16 icon-nav05 bg-icon-gray_1"></i>
+					<i class="icon-only icon-14 icon-nav05 bg-icon-gray_1"></i>
+					<i class="icon-only icon-12 icon-nav05 bg-icon-gray_1"></i>
+				</div>
+			</div>
+
 		</div>
 	</div>
 </body>
