--- a/resources/css/ui-layout.css
+++ b/resources/css/ui-layout.css
@@ -365,12 +365,13 @@ main .main-inner {flex:1 1 calc(100% - 52px);display:flex;}
 .financial-player-title strong {font-size:18px;font-weight:700;color:var(--typography-white);line-height:1;}
 .financial-player-controller {display:flex;gap:14px;align-items:center;justify-content:center;}
 .financial-player-controller button {display:flex;flex:0 0 46px;width:46px;height:46px;align-items:center;justify-content:center;border-radius:8px;background-color:var(--surface-surface100);}
-.soundwave-container {flex:0 0 16px;width:16px;height:16px;display:flex;align-items:flex-end;justify-content:space-between;gap:3px;padding:1px 2px;}
-.bar {width:2px;background:var(--white-24);border-radius:2px;}
+.financial-player .soundwave-container {flex:0 0 16px;width:16px;height:16px;display:flex;align-items:flex-end;justify-content:space-between;gap:3px;padding:1px 2px;}
+
+.financial-player .soundwave-container .bar {width:2px;background:var(--white-24);border-radius:2px;}
 .financial-player.is-playing .soundwave-container .bar {animation:equalizer 1.9s steps(20, end) infinite;height:100%;background-color:var(--icon-white);}
-.bar:nth-child(1) {height:7px;}
-.bar:nth-child(2) {height:10px;}
-.bar:nth-child(3) {height:14px;}
+.financial-player .bar:nth-child(1) {height:7px;}
+.financial-player .bar:nth-child(2) {height:10px;}
+.financial-player .bar:nth-child(3) {height:14px;}
 .financial-player.is-playing .bar:nth-child(1) {animation-duration:1.9s;}
 .financial-player.is-playing .bar:nth-child(2) {animation-duration:2.0s;}
 .financial-player.is-playing .bar:nth-child(3) {animation-duration:1.7s;}
@@ -402,6 +403,17 @@ main .main-inner {flex:1 1 calc(100% - 52px);display:flex;}
     96% {height:70%;}
     100% {height:80%;}
 }
+
+.main-nav {background-color:var(--background-bg_white);box-shadow: 0px 2px 30px -4px rgba(0, 0, 0, 0.15);}
+.main-nav ul {display:flex;padding:0 12px;}
+.main-nav ul li {flex:1;}
+.main-nav ul li a {display:flex;flex-direction:column;align-items:center;justify-content:center;padding:18px 0 20px;gap:8px;}
+.main-nav ul li a .icon {position:relative;width:32px;height:32px;}
+.main-nav ul li a strong {font-size:15px;font-weight:500;color:var(--gray-500);line-height:1;}
+.main-nav ul li.is-current .icon i {background-color:var(--icon-default)!important;}
+.main-nav ul li.list05.is-current .icon:before {content:'';position:absolute;right:0;top:0;width:6px;height:6px;background-color:var(--yellow-600);border-radius:50%;}
+.main-nav ul li.is-current strong {color:var(--typography-black);font-weight:700;}
+
 
 /* btn-wrap */
 .btn-wrap {display:flex;gap:8px;padding:12px 16px;justify-content:center;align-items:center;background-color:var(--white-100);}
